tools/tests/ui/fail/l1062.cnf
// Test file for error code: L1062
// Expected error: Overflow Type character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
